--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,8 @@ python-docx==1.2.0
 langchain==1.2.7
 langchain-text-splitters==1.1.0
 
-# llm
+# 
+typing-extensions==4.15.0
 google-genai==1.61.0
 
 
