--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,9 @@ langchain-text-splitters==1.1.0
 # 
 typing-extensions==4.15.0
 google-genai==1.61.0
+duckduckgo-search==8.1.1
+# duckduck search
+ddgs==9.10.0
 
 
 
