--- a/requirements.txt
+++ b/requirements.txt
@@ -21,8 +21,8 @@ django-celery-results==2.6.0
 # vector database
 tiktoken==0.12.0
 weaviate-client==4.19.2
-sentence-transformers==5.2.2
-torch==2.10.0
+# sentence-transformers==5.2.2
+# torch==2.10.0
 
 # document processing
 pypdf==6.6.2
@@ -36,6 +36,12 @@ google-genai==1.61.0
 duckduckgo-search==8.1.1
 # duckduck search
 ddgs==9.10.0
+# playwright==1.58.0
+
+
+
+whitenoise==6.11.0
+
 
 
 
